<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp">

    <android.support.v7.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/txtCompany"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/company_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RUC: " />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/txtRuc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ruc_number" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:text="@string/date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
