<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="false"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageDoapps"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="left|bottom"
        android:layout_marginBottom="-26dp"
        android:layout_marginLeft="12dp"
        android:src="@drawable/ic_watermaker_doapps_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/baseRed"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_total"
                        android:textColor="@color/white"
                        android:textSize="17dp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <EditText
                    android:id="@+id/pbase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/selector_edt_dark"
                    android:inputType="numberDecimal"
                    android:maxLength="20"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/selector_cursor_black"
                    android:textSize="24dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/baseRed"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_igv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/igv"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spnIgv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="4"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/pigv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="5.8"
                    android:background="@drawable/selector_edt_dark"
                    android:inputType="numberDecimal"
                    android:maxLength="20"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/selector_cursor_black"
                    android:textSize="24dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/baseRed"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <EditText
                    android:id="@+id/ptotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/selector_edt_dark"
                    android:inputType="numberDecimal"
                    android:maxLength="20"
                    android:paddingRight="20dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/selector_cursor_black"
                    android:textSize="24dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>